--- a/biography/index.html
+++ b/biography/index.html
@@ -7,7 +7,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
         <title>Biography - Jian&#39;s Site</title><meta name="Description" content="这是我的全新 Hugo 网站"><meta property="og:title" content="Biography" />
 <meta property="og:description" content="XUE JIAN E-mail: xue9835426@gmail.com
-EDUCATION M.E. in Computer Science, Georgia Institute of Technology, Mar 2023 - Sep 2024
+EDUCATION M.S. in Computer Science, Georgia Institute of Technology, Mar 2023 - Sep 2024
 Ph.D. in Civil Engineering, Urban Earthquake Disaster Mitigation Engineering and Disaster Process Management Engineering Lab, The University of Tokyo, Aug 2019 - now
 Preparatory School for Chinese Students to Japan, Oct 2018 - Aug 2019
 M.E. in Mechanical Engineering, State Key Laboratory of Explosion Science and Technology, Beijing Institute of Technology, Sep 2016 - Jul 2018" />
@@ -21,7 +21,7 @@ M.E. in Mechanical Engineering, State Key Laboratory of Explosion Science and Te
 
 <meta name="twitter:title" content="Biography"/>
 <meta name="twitter:description" content="XUE JIAN E-mail: xue9835426@gmail.com
-EDUCATION M.E. in Computer Science, Georgia Institute of Technology, Mar 2023 - Sep 2024
+EDUCATION M.S. in Computer Science, Georgia Institute of Technology, Mar 2023 - Sep 2024
 Ph.D. in Civil Engineering, Urban Earthquake Disaster Mitigation Engineering and Disaster Process Management Engineering Lab, The University of Tokyo, Aug 2019 - now
 Preparatory School for Chinese Students to Japan, Oct 2018 - Aug 2019
 M.E. in Mechanical Engineering, State Key Laboratory of Explosion Science and Technology, Beijing Institute of Technology, Sep 2016 - Jul 2018"/>
@@ -112,7 +112,7 @@ M.E. in Mechanical Engineering, State Key Laboratory of Explosion Science and Te
                 <div class="container"><div class="page single special"><h1 class="single-title animated pulse faster">Biography</h1><div class="content" id="content"><h1 id="xue-jian">XUE JIAN</h1>
 <p>E-mail: <a href="mailto:xue9835426@gmail.com" rel=""><span class="underline">xue9835426@gmail.com</span></a></p>
 <h5 id="education">EDUCATION</h5>
-<p>M.E. in Computer Science, Georgia Institute of Technology, Mar 2023 - Sep 2024</p>
+<p>M.S. in Computer Science, Georgia Institute of Technology, Mar 2023 - Sep 2024</p>
 <p>Ph.D. in Civil Engineering, Urban Earthquake Disaster Mitigation Engineering and Disaster Process Management Engineering Lab, The University of Tokyo, Aug 2019 - now</p>
 <p>Preparatory School for Chinese Students to Japan, Oct 2018 - Aug 2019</p>
 <p>M.E. in Mechanical Engineering, State Key Laboratory of Explosion Science and Technology, Beijing Institute of Technology, Sep 2016 - Jul 2018</p>
