--- a/biography/index.html
+++ b/biography/index.html
@@ -143,7 +143,7 @@ M.E. in Mechanical Engineering, State Key Laboratory of Explosion Science and Te
 </li>
 </ul>
 <h5 id="internship-and-academic-activities">INTERNSHIP AND ACADEMIC ACTIVITIES</h5>
-<p>CAEP Soflware Center for High Performance Numerical Simulation (Beijing, China, February 7, 2022 - February 26, 2022)</p>
+<p>CAEP Software Center for High Performance Numerical Simulation (Beijing, China, February 7, 2022 - February 26, 2022)</p>
 <p>RIKEN Center for Computational Science (Kobe, Japan, January 18, 2021 - January 29, 2021)</p>
 <p>Summer School, CSCS - Swiss National Supercomputing Centre (Lugano, Switzerland, July 13, 2020 - July 24, 2020)</p>
 <h5 id="academic-conferences">ACADEMIC CONFERENCES</h5>
