--- a/biography/index.html
+++ b/biography/index.html
@@ -189,7 +189,7 @@ Lugano, Switzerland, July 13, 2020 - July 24, 2020</p>
 <p>Song ShuiZhou, Zhang Changsuo, <strong>Xue Jian</strong>. Research on the Application of Blast-Unloading in Increasing the Lump Coal Rate of Fully-Mechanized Mining Face. Coal Technology. 2018, 37(3): 52-54</p>
 </li>
 <li>
-<p><strong>Xue Jian</strong>, Wang Cheng. Motional Characteristic of Underwater Explosion Bubble near Circular Hole of Solid Wall. The International Society of Multiphysics. MC1755</p>
+<p><strong>Xue Jian</strong>, Wang Cheng. Motional Characteristic of Underwater Explosion Bubble near Circular Hole of Solid Wall. The International Conference of Multiphysics. MC1755</p>
 </li>
 <li>
 <p><strong>Xue Jian</strong>, Wang Cheng. Study on the Characteristics of Underwater Explosion Bubble near Perforated Solid Wall. The Chinese Congress of Theoretical and Applied Mechanics. CCTAM2017-A31-MS091-0412</p>
