--- a/404.html
+++ b/404.html
@@ -5,13 +5,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="robots" content="noodp" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-        <title>404 Page not found - Jian&#39;s Site</title><meta name="Description" content="这是我的全新 Hugo 网站"><meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="这是我的全新 Hugo 网站" />
-<meta property="og:type" content="website" />
-<meta property="og:url" content="https://Mysticor.github.io/404.html" /><meta property="og:image" content="https://Mysticor.github.io/logo.png" />
-<meta name="twitter:card" content="summary_large_image" />
-<meta name="twitter:image" content="https://Mysticor.github.io/logo.png" /><meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="这是我的全新 Hugo 网站"/>
+        <title>404 Page not found - Jian&#39;s Site</title><meta name="Description" content="这是我的全新 Hugo 网站"><meta property="og:url" content="https://Mysticor.github.io/404.html">
+  <meta property="og:site_name" content="Jian&#39;s Site">
+  <meta property="og:title" content="404 Page not found">
+  <meta property="og:description" content="这是我的全新 Hugo 网站">
+  <meta property="og:locale" content="en">
+  <meta property="og:type" content="website">
+    <meta property="og:image" content="https://Mysticor.github.io/logo.png">
+
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://Mysticor.github.io/logo.png">
+  <meta name="twitter:title" content="404 Page not found">
+  <meta name="twitter:description" content="这是我的全新 Hugo 网站">
 <meta name="application-name" content="LoveIt">
 <meta name="apple-mobile-web-app-title" content="LoveIt"><meta name="theme-color" content="#ffffff"><meta name="msapplication-TileColor" content="#da532c"><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" />
         <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
@@ -92,7 +97,7 @@
         })();
     </script></div>
             </main><footer class="footer">
-        <div class="footer-container"><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2019 - 2024</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">XUE JIAN</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
+        <div class="footer-container"><div class="footer-line"><i class="far fa-copyright fa-fw"></i><span itemprop="copyrightYear">2019 - 2025</span><span class="author" itemprop="copyrightHolder">&nbsp;<a href="/" target="_blank">XUE JIAN</a></span>&nbsp;|&nbsp;<span class="license"><a rel="license external nofollow noopener noreffer" href="https://creativecommons.org/licenses/by-nc/4.0/" target="_blank">CC BY-NC 4.0</a></span></div>
         </div>
     </footer></div>
 
